gitops/base/hello-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service
  labels:
    app: hello-service
  annotations:
    gitops.example.com/managed-by: argocd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hello-service
  template:
    metadata:
      labels:
        app: hello-service
    spec:
      imagePullSecrets:
        - name: ghcr-pull
      containers:
        - name: hello-service
          image: ghcr.io/soumendoluinit/myrepo@sha256:88dd3b92fea48f4264e9f92e0fa8d6282cf73b15a916f7e6a7d395bc2581f788
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9080
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 768Mi

          startupProbe:
            httpGet:
              path: /application1/getStudent
              port: 9080
            periodSeconds: 5
            failureThreshold: 12

          readinessProbe:
            httpGet:
              path: /application1/getStudent
              port: 9080
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /application1/getStudent
              port: 9080
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
