gitops/base/hello-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello-service
  ports:
    - name: http
      port: 9080
      targetPort: http
      protocol: TCP
  type: ClusterIP
