gitops/base/hello-service/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-service
spec:
  parentRefs:
    - name: cilium
      namespace: kube-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /application1
      backendRefs:
        - name: hello-service
          port: 9080
