gitops/base/hello-service/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-to-hello-service
spec:
  endpointSelector:
    matchLabels:
      app: hello-service
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "9080"
              protocol: TCP
